Added init structure of db module

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,21 @@
 version = 2.3.1
-align = none
-align.openParenCallSite = true
-align.openParenDefnSite = true
-maxColumn = 120
-continuationIndent.defnSite = 2
-assumeStandardLibraryStripMargin = true
-danglingParentheses = true
-rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 docstrings = JavaDoc
+style = defaultWithAlign
+maxColumn = 200
+continuationIndent.callSite = 2
+
+newlines {
+  sometimesBeforeColonInMethodReturnType = false
+}
+
+align {
+  arrowEnumeratorGenerator = false
+  ifWhileOpenParen = false
+  openParenCallSite = false
+  openParenDefnSite = false
+}
+
+rewrite {
+  rules = [SortImports, RedundantBraces]
+  redundantBraces.maxLines = 1
+}
